--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <!--navbar component-->
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light">
     <a class="navbar-brand" href="#theme">
         <img id="logo" src="./assets/images/logo-elixir.png" width="50" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
@@ -46,7 +46,7 @@
 <div id="theme"></div>
 
 <!--about US part-->
-<div class="container mt-5 mb-5" id="what-we-do">
+<div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
         <h1 class="col-md-9" data-aos="slide-right" data-aos-duration="600">What we do.</h1>
         <p class="col-md-9" data-aos="slide-right" data-aos-duration="900">
@@ -216,7 +216,7 @@
 <!--who can join us ends here-->
 
 <!--blog link and latest post-->
-<div class="container-fluid mt-3" id="blog">
+<div class="container-fluid" id="blog">
     <div class="row justify-content-center">
     <div class="col-md-9 mt-5">
         <h3 style="display: inline-block;">Love to read? Have a look at our medium blog!!</h3>
