added loader animation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/loaders.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/lux/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/customStyles.css">
@@ -13,6 +14,18 @@
 </head>
 
 <body>
+<div id="preload">
+    <div class="loader">
+        <div class="pacman">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+</div>
+
 <!--navbar component-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light">
     <a class="navbar-brand" href="#theme">
