banner head made

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+<!--preloader is here-->
 <div id="preload">
     <div class="loader">
         <div class="pacman">
@@ -25,10 +26,11 @@
         </div>
     </div>
 </div>
+<!--preloader ends here-->
 
 <!--navbar component-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-    <a class="navbar-brand" href="#theme">
+    <a class="navbar-brand" href="#banner-head">
         <img id="logo" src="./assets/images/logo-elixir.png" width="50" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +39,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" id="link" href="#theme">Home</a>
+                <a class="nav-link" id="link" href="#banner-head">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="link1" href="#what-we-do">What we do ?</a>
@@ -56,13 +58,22 @@
 </nav>
 <!--navbar component ends-->
 
+<div class="container-fluid banner" id="banner-head">
+    <div class="row justify-content-center heading">
+        <div class="col-md-10">
+            <h1 style="font-weight: bolder; font-size: 8vw; letter-spacing: 10pt; border-bottom: #dc493a solid 3px;">ELIXIR</h1>
+            <h3 style="font-weight: bolder; font-size: 4vw">the health and fitness soceity of <strong>Delhi Technological Society</strong></h3>
+        </div>
+    </div>
+</div>
+
 <div id="theme"></div>
 
 <!--about US part-->
 <div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
         <h1 class="col-md-9" data-aos="slide-right" data-aos-duration="600">What we do.</h1>
-        <p class="col-md-9" data-aos="slide-right" data-aos-duration="900">
+        <p class="col-md-9" data-aos="slide-right" data-aos-duration="900" style="color: black; font-weight: bold">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
@@ -128,17 +139,12 @@
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
             <h3 style="display: inline-block;" data-aos="slide-left" data-aos-duration="600">Web developers and designers </h3>
-            <p data-aos="zoom-in" data-aos-duration="1000" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i</p>
+                </p>
         </div>
     </div>
     <!--info card ends here---->
@@ -146,17 +152,13 @@
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
             <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Graphic designers</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i</p>
+                ncididunt ut labore et doli</p>
         </div>
     </div>
     <!--info card ends here---->
@@ -164,15 +166,11 @@
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
             <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Content Writers</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis rure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i</p>
         </div>
@@ -182,15 +180,11 @@
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
             <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Corporate Managers</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis noe dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i</p>
         </div>
@@ -200,13 +194,10 @@
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
             <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Health and fitness instructors</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                ncididunt ut labore ena aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
@@ -218,7 +209,7 @@
     <!--join here button--->
     <div class="row justify-content-center">
         <div class="col-md-6 mt-5" data-aos="slide-up" data-aos-duration="500">
-            <h3 style="display: inline-block;">Interested in joining Us?</h3>
+            <h2 style="display: inline-block; margin:1vh 1vh;">Interested in joining Us?</h2>
             <button class="btn btn-danger">APPLY !</button>
         </div>
 
@@ -232,7 +223,7 @@
 <div class="container-fluid" id="blog">
     <div class="row justify-content-center">
     <div class="col-md-9 mt-5">
-        <h3 style="display: inline-block;">Love to read? Have a look at our medium blog!!</h3>
+        <h2 style="display: inline-block;">Love to read? Have a look at our medium blog!!</h2>
     </div>
     </div>
 </div>
@@ -241,8 +232,8 @@
 <!--connect with us-->
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
-        <div class="col-md-3 mt-5" data-aos="slide-left" data-aos-duration="800">
-            <h3 style="display: inline-block;">Let's connect !!</h3>
+        <div class="col-md-4 mt-5" data-aos="slide-left" data-aos-duration="800">
+            <h1 style="display: inline-block;">Let's connect !!</h1>
         </div>
     </div>
     <div class="row justify-content-center">
