added links to Socialmedia and WIP page

--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-md-6 mt-3" data-aos="zoom-in-right" data-aos-duration="1000">
-            <a href="#"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
-            <a href="#"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
-            <a href="#"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
-            <a href="#"><img class="img-fluid" src="./assets/social_media/insta.png"></a>
-            <a href="#"><img class="img-fluid" src="./assets/social_media/twitter.png"></a>
-            <a href="#"><img class="img-fluid" src="./assets/social_media/youtube.png"></a>
+            <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
+            <a href="./WIP.html" target="_blank"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
+            <a href="mailto:elixir.healthsociety@gmail.com"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
+            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><img class="img-fluid" src="./assets/social_media/insta.png"></a>
+            <a href="./WIP.html" target="_blank"><img class="img-fluid" src="./assets/social_media/twitter.png"></a>
+            <a href="./WIP.html" target="_blank"><img class="img-fluid" src="./assets/social_media/youtube.png"></a>
         </div>
     </div>
 </div>
