--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <div class="container-fluid banner" id="banner-head">
     <div class="row justify-content-center heading">
         <div class="col-md-10">
-            <h1 style="font-weight: bolder; font-size: 8vw; letter-spacing: 10pt; border-bottom: #dc493a solid 3px;">ELIXIR</h1>
-            <h3 style="font-weight: bolder; font-size: 4vw">the health and fitness soceity of <strong>Delhi Technological Society</strong></h3>
+            <h1 style="font-weight: bolder; font-size: 8vw; letter-spacing: 15pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
+            <h3 style="font-weight: bolder; font-size: 4vw">the health and fitness soceity of <strong style="border-bottom: solid #93dbb3 4px;">Delhi Technological Society</strong></h3>
         </div>
     </div>
 </div>
@@ -72,7 +72,7 @@
 <!--about US part-->
 <div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9" data-aos="slide-right" data-aos-duration="600">What we do.</h1>
+        <h1 class="col-md-9" data-aos="slide-right" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:green;"></i>What we do.</h1>
         <p class="col-md-9" data-aos="slide-right" data-aos-duration="900" style="color: black; font-weight: bold">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -132,13 +132,13 @@
 <div class="container-fluid info-card-group" id="who-can-join">
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h1>Who can join us?</h1>
+            <h1><i class="fas fa-handshake" style="margin:2vh; color:cornflowerblue;"></i>Who can join us?</h1>
         </div>
     </div>
     <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;" data-aos="slide-left" data-aos-duration="600">Web developers and designers </h3>
+            <h3 style="display: inline-block;" data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Web developers and designers </h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -151,7 +151,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Graphic designers</h3>
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Graphic designers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -165,7 +165,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Content Writers</h3>
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Content Writers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -179,7 +179,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Corporate Managers</h3>
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Corporate Managers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -193,7 +193,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Health and fitness instructors</h3>
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Health and fitness instructors</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -223,7 +223,7 @@
 <div class="container-fluid" id="blog">
     <div class="row justify-content-center">
     <div class="col-md-9 mt-5">
-        <h2 style="display: inline-block;">Love to read? Have a look at our medium blog!!</h2>
+        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:limegreen;"></i>Love to read? Have a look at our medium blog!!</h2>
     </div>
     </div>
 </div>
@@ -233,7 +233,7 @@
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
         <div class="col-md-4 mt-5" data-aos="slide-left" data-aos-duration="800">
-            <h1 style="display: inline-block;">Let's connect !!</h1>
+            <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:greenyellow;"></i>Let's connect !!</h1>
         </div>
     </div>
     <div class="row justify-content-center">
