fixed color and changes sm to fontaweseom
Signed-off-by: pranav gupta <pg07codes@gmail.com>

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <!--about US part-->
 <div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9" data-aos="slide-right" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:green;"></i>What we do.</h1>
-        <p class="col-md-9" data-aos="slide-right" data-aos-duration="900" style="color: black; font-weight: bold">
+        <h1 class="col-md-9" data-aos="zoom-in" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:green;"></i>What we do.</h1>
+        <p class="col-md-9" data-aos="fade-in" data-aos-duration="900" style="color: black; font-weight: bold">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
@@ -138,7 +138,7 @@
     <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;" data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Web developers and designers </h3>
+            <h3 style="display: inline-block;" data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Web developers and designers </h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -151,7 +151,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Graphic designers</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Graphic designers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -165,7 +165,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Content Writers</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Content Writers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -179,7 +179,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Corporate Managers</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Corporate Managers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -193,7 +193,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Health and fitness instructors</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Health and fitness instructors</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -223,7 +223,7 @@
 <div class="container-fluid" id="blog">
     <div class="row justify-content-center">
     <div class="col-md-9 mt-5">
-        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:limegreen;"></i>Love to read? Have a look at our medium blog!!</h2>
+        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:darkgreen;"></i>Love to read? Have a look at our medium blog!!</h2>
     </div>
     </div>
 </div>
@@ -232,18 +232,17 @@
 <!--connect with us-->
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
-        <div class="col-md-4 mt-5" data-aos="slide-left" data-aos-duration="800">
-            <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:greenyellow;"></i>Let's connect !!</h1>
+        <div class="col-md-4 mt-5" data-aos="zoom-out" data-aos-duration="800">
+            <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:mediumseagreen;"></i>Let's connect !!</h1>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-6 mt-3" data-aos="zoom-in-right" data-aos-duration="1000">
-            <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
-            <a href="./WIP.html" target="_blank"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
-            <a href="mailto:elixir.healthsociety@gmail.com"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
-            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><img class="img-fluid" src="./assets/social_media/insta.png"></a>
-            <a href="./WIP.html" target="_blank"><img class="img-fluid" src="./assets/social_media/twitter.png"></a>
-            <a href="./WIP.html" target="_blank"><img class="img-fluid" src="./assets/social_media/youtube.png"></a>
+        <div class="col-md-6 mt-3" style="font-size: 24pt" data-aos="zoom-in-right" data-aos-duration="1000">
+            <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-square fa-2x" style="color: #3B5998"></i></a>
+            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium fa-2x" style="color: #3cb371"></i></a>
+            <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles fas fa-envelope fa-2x" style="color: #c71610" ></i></a>
+            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-instagram fa-2x" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border-radius: 40%;" ></i></a>
+            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube fa-2x" style="color: #FF0000"></i></a>
         </div>
     </div>
 </div>
