--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:og="http://ogp.me/ns#">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Elixir | Delhi Technological University</title>
+
+    <!--for search engine optimization(SEO)-->
+
+    <!-- Search Engine -->
+    <meta name="description"
+          content="elixir is the health and fitness society of Delhi Technological University started with the aim of promoting health and wellness among engineering students">
+    <meta name="image" content="./assets/images/logo-elixir.png">
+
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Elixir DTU , Health and Fitness society of Delhi Technological University">
+    <meta itemprop="description"
+          content="elixir is the health and fitness society of Delhi Technological University started with the aim of promoting health and wellness among engineering students">
+    <meta itemprop="image" content="./assets/images/logo-elixir.png">
+
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta property="og:title" content="Elixir DTU , Health and Fitness society of Delhi Technological University" />
+    <meta name="og:description"
+          content="elixir is the health and fitness society of Delhi Technological University started with the aim of promoting health and wellness among engineering students">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pg07codes.github.io/elixirDTU/" />
+    <meta property="og:image" content="./assets/images/logo-elixir.png" />
+    <meta property="og:site_name" content="Elixir DTU" />
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/loaders.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/lux/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/customStyles.css">
     <link rel="icon" href="./assets/images/favicon.png">
-    <title>Elixir | Delhi Technological University</title>
+
 </head>
 
 <body>
@@ -57,15 +82,16 @@
     </div>
 </nav>
 <!--navbar component ends-->
-
-<div class="container-fluid banner" id="banner-head">
-    <div class="row justify-content-center heading">
-        <div class="col-md-10">
-            <h1 style="font-weight: bolder; font-size: 8vw; letter-spacing: 15pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
-            <h3 style="font-weight: bolder; font-size: 4vw">the health and fitness soceity of <strong style="border-bottom: solid #93dbb3 4px;">Delhi Technological Society</strong></h3>
+<header>
+    <div class="container-fluid banner" id="banner-head">
+        <div class="row justify-content-center heading">
+            <div class="col-md-10">
+                <h1 style="font-weight: bolder; font-size: 8vw; letter-spacing: 15pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
+                <h3 style="font-weight: bolder; font-size: 4vw">the health and fitness soceity of <strong style="border-bottom: solid #93dbb3 4px;">Delhi Technological Society</strong></h3>
+            </div>
         </div>
     </div>
-</div>
+</header>
 
 <div id="theme"></div>
 
@@ -237,10 +263,11 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-6 mt-3" style="font-size: 24pt" data-aos="zoom-in-right" data-aos-duration="1000">
+        <div class="col-md-7 mt-3" style="font-size: 24pt" data-aos="zoom-in-right" data-aos-duration="1000">
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-square fa-2x" style="color: #3B5998"></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium fa-2x" style="color: #3cb371"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles fas fa-envelope fa-2x" style="color: #c71610" ></i></a>
+            <a href="https://www.linkedin.com/company/elixir-dtu-health-club-123/"><i class=" sm_handles fab fa-linkedin fa-2x" style="color: #0e76a8" ></i></a>
             <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-instagram fa-2x" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border-radius: 40%;" ></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube fa-2x" style="color: #FF0000"></i></a>
         </div>
