did some requested changes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <!--about US part-->
 <div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9" data-aos="zoom-in" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:green;"></i>What we do.</h1>
+        <h1 class="col-md-9" data-aos="zoom-in" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:#749C75;"></i>What we do.</h1>
         <p class="col-md-9" data-aos="fade-in" data-aos-duration="900" style="color: black; font-weight: bold">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -158,13 +158,13 @@
 <div class="container-fluid info-card-group" id="who-can-join">
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h1><i class="fas fa-handshake" style="margin:2vh; color:cornflowerblue;"></i>Who can join us?</h1>
+            <h1><i class="fas fa-handshake" style="margin:2vh; color:#749C75;"></i>Who can join us?</h1>
         </div>
     </div>
     <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;" data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Web developers and designers </h3>
+            <h3 style="display: inline-block;" data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Web developers and designers </h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -177,7 +177,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Graphic designers</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Graphic designers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -191,7 +191,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Content Writers</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Content Writers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -205,7 +205,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Corporate Managers</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Corporate Managers</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -219,7 +219,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:yellow;"></i>Health and fitness instructors</h3>
+            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Health and fitness instructors</h3>
             <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -249,7 +249,7 @@
 <div class="container-fluid" id="blog">
     <div class="row justify-content-center">
     <div class="col-md-9 mt-5">
-        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:darkgreen;"></i>Love to read? Have a look at our medium blog!!</h2>
+        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:#749C75;"></i>Love to read? Have a look at our medium blog!!</h2>
     </div>
     </div>
 </div>
@@ -259,11 +259,11 @@
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
         <div class="col-md-4 mt-5" data-aos="zoom-out" data-aos-duration="800">
-            <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:mediumseagreen;"></i>Let's connect !!</h1>
+            <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:#749C75;"></i>Let's connect !!</h1>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-7 mt-3" style="font-size: 24pt" data-aos="zoom-in-right" data-aos-duration="1000">
+        <div class="col-md-6 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-square fa-2x" style="color: #3B5998"></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium fa-2x" style="color: #3cb371"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles fas fa-envelope fa-2x" style="color: #c71610" ></i></a>
@@ -274,12 +274,6 @@
     </div>
 </div>
 <!--connect with us ends here-->
-
-<!--footer-->
-<div class="container-fluid" id="footer">
-
-</div>
-<!--footer ends-->
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
